src/objects/PreEligibility_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>CRF_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CRF Id</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinically_radiologically_measurable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has clinically or radiologically measurable or non-measurable disease in breast defined as longest diameter ≥ 2.5cm, per protocol 4.1.1 B.</inlineHelpText>
        <label>Clinically/radiologically measurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cytotoxic_Regiments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has not had prior cytotoxic regimens or other targeted anticancer therapies to the ipsilateral breast for this malignancy, per protocol 4.1.1 C.</inlineHelpText>
        <label>Cytotoxic Regiments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCC_Comments__c</fullName>
        <label>DCC Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_In_Breast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disease In Breast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECOG_Score__c</fullName>
        <label>ECOG Score</label>
        <picklist>
            <picklistValues>
                <fullName>0-Asymptomatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Symptomatic but ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Symptomatic, &lt;50% in bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Symptomatic, &gt;= 50% in bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Bedbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Death</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECOG_Snomed__c</fullName>
        <label>ECOG Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ferromegnatic_Prostheses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has no ferromagnetic prostheses that are not compatible with an MRI machine, per protocol 4.1.1 H.</inlineHelpText>
        <label>No ferromagnetic prostheses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Had_prior_cytotoxic_regimens_anticancer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has not had prior cytotoxic regimens or other targeted anticancer therapies to the ipsilateral breast for this malignancy, per protocol 4.1.1 C.</inlineHelpText>
        <label>Not had prior cytotoxic regimens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Histologically_confirmed_invasive_cancer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has histologically confirmed invasive cancer of the female breast as confirmed by core needle, fine needle aspirate, or incisional biopsy*(*Incisional biopsy is allowed if residual tumor after biopsy measures at least 2.5cm), per protocol 4.1.1 A.</inlineHelpText>
        <label>Histologically confirmed invasive cancer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Pregnant_Not_Lactating__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient is non-pregnant and non-lactating, per protocol 4.1.1 G.</inlineHelpText>
        <label>Non-Pregnant and Not-Lactating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_had_prior_RT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has not had prior RT to the ipsilateral breast for this malignancy, per protocol 4.1.1 C.</inlineHelpText>
        <label>Not had prior RT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>PreEligibility_Checklist__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_investigational_agents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has not had other investigational agents within 30 days of study enrollment, per protocol 4.2 A.</inlineHelpText>
        <label>Not had other investigational agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_is_18_years_or_older__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient is 18 years or older, per protocol 4.1.1 D.</inlineHelpText>
        <label>Patient is 18 years or older</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_is_eligible_to_be_screened_for_t__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient is eligible to be screened for the study.</inlineHelpText>
        <label>Patient is eligible to be screened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_is_willin_to_have_study_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient is willing to have study MRI.</inlineHelpText>
        <label>Patient is willing to have study MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_is_willing_to_have_core_biospy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient is willing to have study core biopsy.</inlineHelpText>
        <label>Patient is willing to have core biospy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_signed_up_for_I_SPY2_screening__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient signed up for I-SPY2 screening form.</inlineHelpText>
        <label>Patient signed up for I-SPY2 screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Adenocarcinoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Adenocarcinoma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_signing_screening_consent__c</fullName>
        <inlineHelpText>Reason for not signing screening consent?</inlineHelpText>
        <label>Reason for not signing screening consent</label>
        <picklist>
            <controllingField>Patient_signed_up_for_I_SPY2_screening__c</controllingField>
            <picklistValues>
                <fullName>Patient does not want to participate in a clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient is not willing to be treated with an investigational agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient decided to be treated with a different neoadjuvant regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient decided to have surgery before treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient decided to be treated at another clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance will not cover cost of standard care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_of_observation__c</fullName>
        <label>Time of observation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>PreEligibility Checklists</relationshipLabel>
        <relationshipName>PreEligibility_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X30_Days_Investigational_Agents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Patient has not had other investigational agents within 30 days of study enrollment, per protocol 4.2 A.</inlineHelpText>
        <label>30 Days Investigational Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_preeligibilitychklist_Id__c</fullName>
        <label>pg_preeligibilitychklist_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PreEligibility Checklist</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>PreEligibility Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreEligibility Checklists</pluralLabel>
    <recordTypes>
        <fullName>Adhoc</fullName>
        <active>true</active>
        <label>Adhoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ECOG_Score_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Patient_is_eligible_to_be_screened_for_t__c = true &amp;&amp;  ISPICKVAL( ECOG_Score__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ECOG_Score__c</errorDisplayField>
        <errorMessage>Please Provide ECOG Score</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Signing_screening_consent_form</fullName>
        <active>true</active>
        <errorConditionFormula>( Patient_is_eligible_to_be_screened_for_t__c = true &amp;&amp; Patient_signed_up_for_I_SPY2_screening__c = false &amp;&amp; ISPICKVAL( Reason_for_not_signing_screening_consent__c ,&apos;&apos;))</errorConditionFormula>
        <errorMessage>Please give the reason if patient not signing Screening consent form or Uncheck the &quot;Patient signed up for I-SPY2 screening?&quot; checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Signing_screening_consent_form_unchecked</fullName>
        <active>false</active>
        <errorConditionFormula>Patient_signed_up_for_I_SPY2_screening__c = true &amp;&amp;  NOT( ISNULL( TEXT( Reason_for_not_signing_screening_consent__c ) ) )</errorConditionFormula>
        <errorMessage>Please UN-check the &quot;Patient signed up for I-SPY2 screening? &quot; checkbox or Select not for &quot;Reason for none signing screening consent&quot;</errorMessage>
    </validationRules>
</CustomObject>